--- a/labcourse_setup_elabftw_eln/labcourse_setup_elabftw_eln.ipynb
+++ b/labcourse_setup_elabftw_eln/labcourse_setup_elabftw_eln.ipynb
@@ -36,7 +36,7 @@
    "id": "102bbf82",
    "metadata": {},
    "source": [
-    "# Konfiguration"
+    "# Configuration"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "id": "d151b14d",
    "metadata": {},
    "source": [
-    "# Verbindung zu eLabFTW herstellen"
+    "# Connect to eLabFTW"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "id": "2a046aea",
    "metadata": {},
    "source": [
-    "# Benutzer und Gruppen anlegen"
+    "# Create users and groups"
    ]
   },
   {
